--- a/github-webhook/Dockerfile
+++ b/github-webhook/Dockerfile
@@ -12,4 +12,4 @@ ADD . /var/www/
 
 EXPOSE 3000
 
-CMD ["bundle", "exec", "rackup", "-p", "3000"]
+CMD ["bundle", "exec", "rackup", "-p", "3000", "-o", "0.0.0.0"]
